# celerySkillup

./: .flake8  Dockerfile  README.md  dist.env  docker-compose.yml  pyproject.toml  start_flower.sh
app/: __init__.py  dependencies.py  image_transformation.py  main.py  routes.py  s3_manager.py  schemas.py  settings.py  tasks.py
supervisor-configs/conf.d/: celerybeatd.conf  celeryd.conf  flowerd.conf
